ja/15.7/api/api-label.rst
========
ラベルAPI
========

このドキュメントでは、 |Fess| の v2 ラベル API について説明します。
共通のレスポンスエンベロープ・エラーモデルについては :doc:`api-overview` を参照してください。

ベースURLは ``http://<Server Name>/api/v2/`` です（ローカル環境の例: ``http://localhost:8080/api/v2`` ）。

ラベルの取得
=========

リクエスト
--------

==================  ====================================================
HTTPメソッド         GET
エンドポイント        ``/api/v2/labels``
==================  ====================================================

|Fess| に登録されている設定済みラベルの一覧を、共通エンベロープで取得します。

リクエストパラメーター
-----------------

使用できるリクエストパラメーターはありません。

レスポンス
--------

成功時（200）は、共通エンベロープの ``response`` 直下に以下のフィールドが返ります。

::

    {
      "response": {
        "status": 0,
        "record_count": 2,
        "labels": [
          {
            "label": "AWS",
            "value": "aws"
          },
          {
            "label": "Azure",
            "value": "azure"
          }
        ]
      }
    }

各フィールドについては以下の通りです。

.. tabularcolumns:: |p{3cm}|p{12cm}|
.. list-table:: レスポンスフィールド

   * - ``record_count``
     - ラベルの登録件数（integer）。
   * - ``labels``
     - ラベルの配列。
   * - ``label``
     - ラベルの名前。
   * - ``value``
     - ラベルの値。

表: レスポンスフィールド

使用例
====

curl コマンドでのリクエスト例:

::

    curl "http://localhost:8080/api/v2/labels"

エラーレスポンス
============

エラーモデルの詳細は :doc:`api-overview` を参照してください。このエンドポイントが返す HTTP ステータスは以下の通りです。

.. tabularcolumns:: |p{4cm}|p{11cm}|
.. list-table:: エラーレスポンス

   * - ステータスコード
     - 説明
   * - 405 Method Not Allowed
     - HTTP メソッドが許可されていない場合。
   * - 500 Internal Server Error
     - サーバー内部エラーが発生した場合。

表: エラーレスポンス
