ja/15.9/api/api-label.rst
========
ラベルAPI
========

このドキュメントでは、 |Fess| の v2 ラベル API について説明します。
共通のレスポンスエンベロープ・エラーモデルについては :doc:`api-overview` を参照してください。

ベースURLは ``http://<Server Name>/api/v2/`` です（ローカル環境の例: ``http://localhost:8080/api/v2`` ）。

ラベルの取得
=========

リクエスト
--------

==================  ====================================================
HTTPメソッド         GET
エンドポイント        ``/api/v2/labels``
==================  ====================================================

|Fess| に登録されている設定済みラベルの一覧を、共通エンベロープで取得します。

返されるラベルの一覧は、リクエストしたユーザーとリクエスト内容に応じて、以下のように絞り込まれます。

- **権限によるフィルタリング**: ラベルに設定されたアクセス権とユーザーのロールに基づいて絞り込まれます。v2 はセッションベースの認証のため、ログイン済みユーザーは自身のロールでアクセスできるラベルのみを取得できます。アクセス権が一致しないラベルは一覧に含まれません。
- **ロケールによるフィルタリング**: ラベルはロケールごとに登録できます。 ``Accept-Language`` リクエストヘッダーに一致するロケールで登録されたラベルと、ロケールを指定せずに登録されたラベルが返されます。
- **仮想ホストによるフィルタリング**: 仮想ホストを利用している場合は、その仮想ホストに割り当てられたラベルのみが返されます。

リクエストパラメーター
-----------------

クエリパラメーターはありません。返されるラベルの絞り込みは、上記のとおり認証済みユーザーの権限と ``Accept-Language`` リクエストヘッダーに基づいて行われます。

レスポンス
--------

成功時（200）は、共通エンベロープの ``response`` 直下に以下のフィールドが返ります。

::

    {
      "response": {
        "status": 0,
        "record_count": 2,
        "labels": [
          {
            "label": "AWS",
            "value": "aws"
          },
          {
            "label": "Azure",
            "value": "azure"
          }
        ]
      }
    }

各フィールドについては以下の通りです。

.. tabularcolumns:: |p{3cm}|p{12cm}|
.. list-table:: レスポンスフィールド

   * - ``record_count``
     - 返されたラベルの件数（integer）。
   * - ``labels``
     - ラベルの配列。
   * - ``label``
     - ラベルの表示名（ラベル名）。
   * - ``value``
     - ラベルの値。 :doc:`api-search` の ``fields.label`` パラメーターにこの値を指定することで、検索結果を当該ラベルで絞り込めます。

表: レスポンスフィールド

使用例
====

curl コマンドでのリクエスト例:

::

    curl "http://localhost:8080/api/v2/labels"

エラーレスポンス
============

エラーモデルの詳細は :doc:`api-overview` を参照してください。このエンドポイントが返す HTTP ステータスは以下の通りです。

.. tabularcolumns:: |p{4cm}|p{11cm}|
.. list-table:: エラーレスポンス

   * - ステータスコード
     - 説明
   * - 405 Method Not Allowed
     - GET 以外の HTTP メソッドが指定された場合。 ``error.code`` は ``method_not_allowed`` で、 ``Allow: GET`` ヘッダーが付与されます。
   * - 500 Internal Server Error
     - サーバー内部エラーが発生した場合。 ``error.code`` は ``internal_error`` です。

表: エラーレスポンス
